syntax = "proto3";
option go_package = "octavius/internal/pkg/protofiles/executor_cp";
import "google/protobuf/timestamp.proto";

message ExecutionContext{
    uint64 executionID = 1;  
    string jobID = 2 ;             
	string job_name = 3;             
	string name  = 4;                                   
	string image_tag = 5;               
	map<string,string> env_args = 6;           
	string Output = 7;  
	string Status = 8;
	google.protobuf.Timestamp created_at= 9;            
	google.protobuf.Timestamp updated_at  = 10; 
    string executorID = 11;  
}

message Acknowledgement {
    bool recieved = 1;
}